refactor: address reviewer feedback for Prometheus CR selectors
Signed-off-by: Alexander Soelberg Heidarsson <89837986+alex5517@users.noreply.github.com>

--- a/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/bundle/community/manifests/opentelemetry.io_opentelemetrycollectors.yaml
@@ -8271,6 +8271,7 @@ spec:
                         format: duration
                         type: string
                       podMonitorNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8323,6 +8324,7 @@ spec:
                         type: object
                         x-kubernetes-map-type: atomic
                       probeNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8381,6 +8383,7 @@ spec:
                         x-kubernetes-list-type: atomic
                         x-kubernetes-preserve-unknown-fields: true
                       scrapeConfigNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8441,6 +8444,7 @@ spec:
                           type: string
                         type: array
                       serviceMonitorNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
