--- a/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
+++ b/config/crd/bases/opentelemetry.io_opentelemetrycollectors.yaml
@@ -8257,6 +8257,7 @@ spec:
                         format: duration
                         type: string
                       podMonitorNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8309,6 +8310,7 @@ spec:
                         type: object
                         x-kubernetes-map-type: atomic
                       probeNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8367,6 +8369,7 @@ spec:
                         x-kubernetes-list-type: atomic
                         x-kubernetes-preserve-unknown-fields: true
                       scrapeConfigNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
@@ -8427,6 +8430,7 @@ spec:
                           type: string
                         type: array
                       serviceMonitorNamespaceSelector:
+                        default: {}
                         properties:
                           matchExpressions:
                             items:
