--- a/tests/e2e-targetallocator/targetallocator-prometheuscr/chainsaw-test.yaml
+++ b/tests/e2e-targetallocator/targetallocator-prometheuscr/chainsaw-test.yaml
@@ -40,3 +40,9 @@ spec:
     catch:
       - podLogs:
           selector: checker=true
+  - name: step-03
+    try:
+      - apply:
+          file: 03-install.yaml
+      - assert:
+          file: 03-assert.yaml
