--- a/bundle/openshift/manifests/opentelemetry.io_targetallocators.yaml
+++ b/bundle/openshift/manifests/opentelemetry.io_targetallocators.yaml
@@ -2474,6 +2474,7 @@ spec:
                     format: duration
                     type: string
                   podMonitorNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2526,6 +2527,7 @@ spec:
                     type: object
                     x-kubernetes-map-type: atomic
                   probeNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2584,6 +2586,7 @@ spec:
                     x-kubernetes-list-type: atomic
                     x-kubernetes-preserve-unknown-fields: true
                   scrapeConfigNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2644,6 +2647,7 @@ spec:
                       type: string
                     type: array
                   serviceMonitorNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
