--- a/config/crd/bases/opentelemetry.io_targetallocators.yaml
+++ b/config/crd/bases/opentelemetry.io_targetallocators.yaml
@@ -2472,6 +2472,7 @@ spec:
                     format: duration
                     type: string
                   podMonitorNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2524,6 +2525,7 @@ spec:
                     type: object
                     x-kubernetes-map-type: atomic
                   probeNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2582,6 +2584,7 @@ spec:
                     x-kubernetes-list-type: atomic
                     x-kubernetes-preserve-unknown-fields: true
                   scrapeConfigNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
@@ -2642,6 +2645,7 @@ spec:
                       type: string
                     type: array
                   serviceMonitorNamespaceSelector:
+                    default: {}
                     properties:
                       matchExpressions:
                         items:
