fix add prometheus_cr namespace selectors
Signed-off-by: Alexander Soelberg Heidarsson <89837986+alex5517@users.noreply.github.com>

--- a/tests/e2e-targetallocator-cr/01-assert.yaml
+++ b/tests/e2e-targetallocator-cr/01-assert.yaml
@@ -95,10 +95,23 @@ data:
     filter_strategy: relabel-config
     prometheus_cr:
       enabled: true
+      evaluation_interval: 30s
+      pod_monitor_namespace_selector:
+        matchlabels: {}
+        matchexpressions: []
       pod_monitor_selector: null
+      probe_namespace_selector:
+        matchlabels: {}
+        matchexpressions: []
       probe_selector: null
+      scrape_config_namespace_selector:
+        matchlabels: {}
+        matchexpressions: []
       scrape_config_selector: null
       scrape_interval: 30s
+      service_monitor_namespace_selector:
+        matchlabels: {}
+        matchexpressions: []
       service_monitor_selector: null
 kind: ConfigMap
 metadata:
